--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,9 @@ services:
     image: redis:alpine
     ports:
       - '6379:6379'
+
+  jaeger:
+    image: jaegertracing/all-in-one:1.53
+    ports:
+      - '16686:16686'
+      - '4318:4318'
