--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./data:/app/data
     working_dir: /app
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=staging
     depends_on:
       - redis
 
@@ -46,3 +46,11 @@ services:
       - ./grafana:/var/lib/grafana
     depends_on:
       - prometheus
+  nginx:
+    image: nginx:alpine
+    ports:
+      - '8080:80'
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - todo-api
