--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "ioredis": "^5.6.1",
+    "knex": "^3.1.0",
     "pm2": "^6.0.6",
     "prom-client": "^15.1.3",
     "redis": "^5.1.1",
