--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "prom-client": "^15.1.3",
     "redis": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "uuid": "^11.1.0",
-    "winston": "^3.17.0"
+    "uuid": "^11.1.0"
   }
 }
